fix link to stylesheet, shifted ajax script to below jquery

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="/css/master.css" media="screen" title="no title" charset="utf-8">
+  <link rel="stylesheet" href="master.css" media="screen" title="no title" charset="utf-8">
   <title>Yoda speak</title>
 </head>
 <body>
@@ -15,11 +15,9 @@
       <input type="text" id="yoda">
     </div>
      <button id="request">Talk to Yoda</button>
-
     <div id="bio"></div>
   </div>
-
-  <script src="script.js" charset="utf-8"></script>
   <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+  <script src="script.js" charset="utf-8"></script>
 </body>
 </html>
